# multiprocess-object-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/reverse-engineer-spec/: SKILL.md
.claude/skills/spec-driven-change/: SKILL.md
.claude/skills/write-steering/: SKILL.md
config/: default.yaml
docs/specs/_template/: design.md  requirements.md  tasks.md
docs/specs/camera-controller/: design.md  requirements.md  tasks.md
docs/specs/config-manager/: design.md  requirements.md  tasks.md
docs/specs/data-models/: design.md  requirements.md  tasks.md
docs/specs/gui-controller/: design.md  requirements.md  tasks.md
docs/specs/logger/: design.md  requirements.md  tasks.md
docs/specs/object-tracking-controller/: design.md  requirements.md  tasks.md
docs/specs/shared-frame-pool/: design.md  requirements.md  tasks.md
docs/steering/: conventions.md  product.md  structure.md  tech.md
src/: camera_controller.py  config_manager.py  data_models.py  gui_controller.py  logger.py  main.py  object_tracking_controller.py  shared_frame_pool.py
tests/: test_camera_controller.py  test_config_manager.py  test_data_models.py  test_gui_controller.py  test_logger.py  test_object_tracking_controller.py  test_shared_frame_pool.py
