[project]
name = "multiprocess-object-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "opencv-python",
    "onnxruntime",
    "supervision",
    "loguru",
    "PyYAML",
    "Pillow",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = ".tmp/pytest_cache"
